dfir_rs/tests/compile-fail-stable/surface_join_badtypes.rs
../compile-fail/surface_join_badtypes.rs